# auti-lang-bot

./: .gitignore  pyproject.toml
src/auti_lang_bot/: __init__.py  __main__.py
src/auti_lang_bot/handlers/: NewMessage.py  __init__.py
src/auti_lang_bot/models/: text.py
